# server.js
@@ -1,8 +1,8 @@
 'use strict'
 
 // require express and bodyParser
-const  express = require("express");
-const  bodyParser = require("body-parser");
+const express = require("express");
+const bodyParser = require("body-parser");
 const swaggerUi = require('swagger-ui-express'),
 swaggerDocument = require('./swagger.json');
 
@@ -12,16 +12,16 @@ require("./config/db");
 // create express app
 const  app = express();
 
+// use bodyParser middleware on express app
+app.use(bodyParser.urlencoded({ extended:true }));
+app.use(bodyParser.json());
+
 // Import API route
-var routes = require('./routes/bugs'); //importing route
+var routes = require('./routes/records');
 routes(app);
 
 // define port to run express app
 const  port = process.env.PORT || 3000;
-
-// use bodyParser middleware on express app
-app.use(bodyParser.urlencoded({ extended:true }));
-app.use(bodyParser.json());
 
 // Add endpoint
 app.get('/', (req, res) => {
