# swagger.json
@@ -1,100 +1,207 @@
 {
-    "swagger": "2.0",
+    "openapi": "3.0.1",
     "info": {
       "version": "1.0.0",
-      "title": "Bug Tracker API",
-      "description": "Bug Tracker API",
+      "title": "Bank API CRUD",
+      "description": "Bank API CRUD",
       "license": {
         "name": "MIT",
         "url": "https://opensource.org/licenses/MIT"
       }
     },
     "paths": {
-        "/bugs": {
+        "/records": {
             "get": {
-                "tags": ["Bugs"],
-                "summary": "Get all bugs in the system",
+                "tags": ["Records"],
+                "summary": "Get all records in the system",
+                "description": "Get all records in the system",
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "schema": {
-                        "$ref": "#/definitions/Bugs"
+                        "description": "Returning available records",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/Records"
+                                }        
+                            }
                         }
                     }
                 }
             },
             "post": {
-                "tags": ["Bugs"],
-                "description": "Report a new bug",
-                "parameters": [
-                  {
-                    "name": "id",
-                    "in": "body",
-                    "description": "Bug ID",
-                    "type": "string"
-                  },
-                  {
-                    "name": "subject",
-                    "in": "body",
-                    "description": "Bug Subject",
-                    "type": "string"
-                  }
-                ],
-                "produces": ["application/json"],
+                "tags": ["Records"],
+                "summary": "Add a new record in the system",
+                "description": "Add a new record",
+                "requestBody": {
+                    "description": "ADD",
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/RecordsBodyParams"
+                            }
+                        },
+                        "application/x-www-form-urlencoded": {
+                            "schema": {
+                                "$ref": "#/components/RecordsBodyParams"
+                            }
+                        }                        
+                    },
+                    "required": true
+                },
                 "responses": {
                   "201": {
-                    "description": "New bug is created",
+                    "description": "New record is created",
                     "schema": {
-                      "$ref": "#/definitions/BugCreated"
+                      "$ref": "#/components/RecordCreated"
                     }
-                  }
+                  },
+                  "500": {
+                    "description": "Internal Server Error"
+                  }                  
                 }
-            }            
+            }                                   
+        },
+        "/records/{id}": {
+            "get": {
+                "tags": ["Records"],
+                "summary": "Get a specific record in the system",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Record ID",
+                        "type": "string",
+                        "required": true
+                    }
+                ],                
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                        "$ref": "#/components/RecordsObj"
+                        }
+                    }
+                }
+            },            
+            "put": {
+                "tags": ["Records"],
+                "description": "Update an existing record",
+                "parameters": [
+                {
+                    "name": "id",
+                    "in": "path",
+                    "description": "ID of the record to update",
+                    "type": "string",
+                    "required": true
+                }],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/BodyParams"
+                            }
+                        },
+                        "application/x-www-form-urlencoded": {
+                            "schema": {
+                                "$ref": "#/components/BodyParams"
+                            }
+                        }                        
+                    },
+                    "required": "true"
+                },
+                "responses": {
+                    "204": {
+                        "description": "Record is updated"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"                 
+                }
+            },
+            "delete": {
+                "tags": ["Records"],
+                "description": "Delete a new record",
+                "parameters": [
+                {
+                    "name": "id",
+                    "in": "body",
+                    "description": "Record ID",
+                    "type": "string"
+                }]} 
+            }
         }
     },
-    "definitions": {
-        "Bug": {
-            "required": ["name", "_id", "companies"],
+    "components": {
+        "Record": {
             "properties": {
                 "id": {
                 "type": "integer",
                 "uniqueItems": true
                 },
-                "subject": {
+                "account_type": {
                 "type": "string"
                 },
-                "description": {
+                "balance": {
+                "type": "number"
+                },
+                "first_name": {
+                "type": "string"
+                },
+                "last_name": {
                 "type": "string"
                 },
                 "status": {
-                "type": "string"
-                },
-                "created_date": {
-                "type": "string"
-                }
+                    "type": "string"
+                }                
             }
         },
-        "Bugs": {
+        "Records": {
             "type": "array",
-            "$ref": "#/definitions/Bug"
+            "$ref": "#/components/Record"
         },
-        "BugCreated": {
+        "RecordsObj": {
+            "type": "object",
+            "$ref": "#/components/Record"
+        },        
+        "RecordsBodyParams": {
+            "type": "object",
+            "$ref": "#/components/BodyParams"
+        },
+        "RecordCreated": {
             "properties": {
                 "id": {
                 "type": "integer"
                 }
             }
+        },
+        "BodyParams":{
+            "properties": {
+                "account_type": {
+                    "type": "string",
+                    "description": "Account Type"
+                },
+                "balance": {
+                    "type": "number",
+                    "description": "Bank Balance"
+                },
+                "first_name": {
+                    "type": "string",
+                    "description": "First Name"
+                },
+                "last_name": {
+                    "type": "string",
+                    "description": "Last Name"
+                },    
+                "status": {
+                    "type": "string",
+                    "description": "Account Status"
+                }
+            }                                
         }
     },    
-    "host": "localhost:3000",
-    "basePath": "/",
     "tags": [
       {
-        "name": "Bugs",
-        "description": "API for bug tracking"
+        "name": "Records",
+        "description": "CRUD for bank records"
       }
-    ],
-    "schemes": ["http"],
-    "consumes": ["application/x-www-form-urlencoded"],
-    "produces": ["application/json"]
+    ]
 }
